--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,8 @@ body {
     background-color: #ededed;
     padding: 0;
     margin: 0;
-    font-family: monospace;
+    font-family: 'system-ui';
+  
 }
 #padre .graph{
     width: 90%;
@@ -11,26 +12,38 @@ body {
 #padre .menuButtons{
     display: grid;
     width: 10%;
+    margin-right: 50px;
 }
 
 #padre{
-    width: 100%;
+    width: 90%;
+    height:90%;
     display: flex;
-    flex-wrap: wrap;
+    margin: 3em;
 }
 button{
     border: none;
-    font-size: 35px;
+    font-size: 30px;
     color:gray;
+    outline: none;
 }
 button:hover{
-    color:#5e6e77;
+    color:#0491e2;
     font-size: 45px;
-    animation-duration: 3s;
+    cursor: pointer;
+    transition:  font-size 0.5s;
 }
-h2{
-    margin:auto;
-    color:#12619c;
-    padding-left: 1em;
+.heart:hover{
+    color:#f03e3e;
+}
+.heart{
+    color:#eb617f;
+
+}
+h1{
+    margin-top: 0;
+    text-align: center;
+    height: 10%;
+    color:#034475;
 }
 
