--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,22 @@
-
+#aviso-movil-horizontal {
+            display: none;
+        }
+    
+        @media only screen and (orientation:portrait) {
+            #wrapper {
+                display: none;
+            }
+    
+            #aviso-movil-horizontal {
+                display: block;
+            }
+        }
+    
+        @media only screen and (orientation:landscape) {
+            #aviso-movil-horizontal {
+                display: none;
+            }
+        }
 body {
     background-color: #ededed;
     padding: 0;
