--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,9 @@
     to {transform: rotate(360deg);}}
 @-webkit-keyframes rotate {from {-webkit-transform: rotate(0deg);}
   to {-webkit-transform: rotate(360deg);}}
+
 .rotate{
+    font-size: 30px;
     position:relative;
     left:-55px;
     top:-35px; 
@@ -45,7 +47,7 @@ body {
 }
 .aviso{
     text-align: center;
-    font-size: 30px;
+    margin: 1em;
 }
 #padre .graph{
     width: 90%;
