--- a/styles.css
+++ b/styles.css
@@ -17,17 +17,22 @@
 }
 /* ---------------------- */
 @keyframes rotate {from {transform: rotate(0deg);}
-    to {transform: rotate(360deg);}}
+    to {transform: rotate(-360deg);}}
 @-webkit-keyframes rotate {from {-webkit-transform: rotate(0deg);}
-  to {-webkit-transform: rotate(360deg);}}
+  to {-webkit-transform: rotate(-360deg);}}
+
+.texto{
+    border: 3px solid 'black';
+
+}
 
 .rotate{
     font-size: 30px;
     position:relative;
-    left:-55px;
+    left:-50px;
     top:-35px; 
-    -webkit-animation: 3s rotate linear infinite;
-    animation: 3s rotate linear infinite;
+    -webkit-animation: 10s rotate linear infinite;
+    animation: 10s rotate linear infinite;
     -webkit-transform-origin: 50% 50%;
     transform-origin: 50% 50%;
 }
