--- a/styles.css
+++ b/styles.css
@@ -27,18 +27,22 @@
 }
 
 .rotate{
+    color: rgb(224, 224, 224);
     font-size: 30px;
     position:relative;
-    left:-50px;
-    top:-35px; 
+    left:-55px;
+    top:-50px; 
     -webkit-animation: 10s rotate linear infinite;
     animation: 10s rotate linear infinite;
     -webkit-transform-origin: 50% 50%;
     transform-origin: 50% 50%;
 }
 .phone{
-    font-size: 100px;
+    font-size: 150px;
     position:relative;
+    transform:rotate(90deg);
+    -ms-transform:rotate(90deg); /* IE 9 */
+    -webkit-transform:rotate(90deg); /* Opera, Chrome, and Safari */
 }
 
 
