--- a/styles.css
+++ b/styles.css
@@ -99,3 +99,22 @@ h1{
     color:#034475;
 }
 
+@media only screen and (max-width:800px){
+    #padre{
+        width: 100%;
+        height:90%;
+        display: grid;
+        margin: 3em;
+    }
+    #padre .graph{
+        width: 90%;
+    }
+    #padre .menuButtons{
+        display: flex;
+        justify-content: center;
+        width: 83%;
+        margin-right: 50px;
+
+    }
+
+}
