--- a/styles.css
+++ b/styles.css
@@ -20,11 +20,7 @@
     to {transform: rotate(-360deg);}}
 @-webkit-keyframes rotate {from {-webkit-transform: rotate(0deg);}
   to {-webkit-transform: rotate(-360deg);}}
-
-.texto{
-    border: 3px solid 'black';
-
-}
+/* ----------------------------- */
 
 .rotate{
     color: rgb(224, 224, 224);
@@ -46,6 +42,7 @@
 }
 
 
+/* --------------------------------------- */
 
 body {
     background-color: #ededed;
@@ -53,6 +50,10 @@ body {
     margin: 0;
     font-family: 'system-ui';
   
+}
+.title {
+    padding: 0;
+    margin: 0;
 }
 .aviso{
     color: gray;
@@ -72,7 +73,8 @@ body {
     width: 90%;
     height:90%;
     display: flex;
-    margin: 3em;
+    margin-left: 3em;
+    margin-top: 1em;
     position:relative;
 }
 button{
@@ -106,7 +108,6 @@ h1{
 }
 .wrapper{
     position:relative;
-
 }
 .subtitle{
     position: absolute;
