--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,17 @@ h1{
     font-size: 13px;
     color:gray;
 }
+.legend{
+    display: none;
+    font-size: 11px;
+    padding-bottom: 15px;
+    width: 100%;
+    /* display: flex; */
+    justify-content: space-around;
+    margin:auto;
+    color: #034475;
+    border: 1px dashed rgb(216, 215, 215);
+}
 
 @media only screen and (max-width:800px){
     #padre{
