--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@
 
 body {
     background-color: #ededed;
-    padding: 1em;
+    padding-left:  3em;
     margin: 0;
     font-family: 'system-ui';
   
