--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+body {
+    background-color: #ededed;
+    padding-left:  10px;
+    margin-left: -55px;
+    font-family: 'system-ui';
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+  
+}
 #aviso-movil-horizontal {
             display: none;
         }
@@ -44,13 +54,7 @@
 
 /* --------------------------------------- */
 
-body {
-    background-color: #ededed;
-    padding-left:  10px;
-    margin: 0;
-    font-family: 'system-ui';
-  
-}
+
 .title {
     padding: 0;
     margin: 0;
@@ -61,6 +65,7 @@ body {
     margin: 1em;
 }
 #padre .graph{
+    /* margin-top: -0px; */
     width: 90%;
 }
 #padre .menuButtons{
@@ -74,7 +79,7 @@ body {
     height:90%;
     display: flex;
     margin-left: 3em;
-    margin-top: 1em;
+    /* margin-top: 1em; */
     position:relative;
 }
 button{
@@ -82,12 +87,13 @@ button{
     font-size: 30px;
     color:gray;
     outline: none;
+    transition:  all 0.5s;
+
 }
 button:hover{
     color:#0491e2;
-    font-size: 45px;
+    font-size: 35px;
     cursor: pointer;
-    transition:  font-size 0.5s;
 }
 .heart:hover{
     color:#f03e3e;
@@ -126,15 +132,6 @@ h1{
     color: #034475;
     border: 1px dashed rgb(216, 215, 215);
 }
-/* .graficoGlobal{
-  /* position: relative; */
-  /* margin: auto; */
-  height: 65vh;
-  width: 50vw;
-} */
-
-
-
 
 @media only screen and (max-width:800px){
     #padre{
